checkbox vertical alignment fixed

--- a/app/assets/stylesheets/components/_checkboxes.scss
+++ b/app/assets/stylesheets/components/_checkboxes.scss
@@ -2,7 +2,7 @@
   background-color: white;
   border-color: $orange;
   transform: scale(1.5);
-  margin-top: 15px;
+  margin-bottom: -10px;
 }
 
 
